# OS

./: README.md
Channel/: buffered_channel.h
Libraries Console/: .swp  script.sh
Libraries Console/Client/: .main.cpp.swp  main.cpp
Libraries Console/Vector/: library.cpp
Libraries Ubuntu/Client/Client/: CMakeLists.txt  main.cpp
Libraries Ubuntu/Libs/Number/: CMakeLists.txt  library.cpp
Libraries Ubuntu/Libs/Vector/: CMakeLists.txt  library.h
Libraries_Console_Windows/: script.ps1
Libraries_Console_Windows/Client/: Client.cpp
Libraries_Console_Windows/Number/: NumberLib.cpp  NumberLib.h
Libraries_Console_Windows/Vector/: VectorLib.cpp  VectorLib.h
Libs/Client/: Client.sln
Libs/Client/Client/: Client.cpp  Client.vcxproj
Libs/Client/Debug/: Client.ilk
Libs/Libs/: Libs.sln
Libs/Libs/Debug/: NumberLib.lib  VectorLib.exp  VectorLib.ilk  VectorLib.lib
Libs/Libs/NumberLib/: NumberLib.cpp  NumberLib.h  NumberLib.vcxproj  NumberLib.vcxproj.filters
Libs/Libs/VectorLib/: VectorLib.cpp  VectorLib.h  VectorLib.vcxproj  VectorLib.vcxproj.filters
Matrix_Mult_Linux/: CMakeLists.txt  main.cpp
Matrix_Mult_Thread/: main.cpp
Matrix_Mult_Windows/: main.cpp
Pipe Windows/A/: main.cpp
Pipe Windows/M/: main.cpp
Pipe Windows/Main/: main.cpp
Pipe Windows/P/: main.cpp
Pipe Windows/S/: main.cpp
Pipes Linux/A/: main.cpp
Pipes Linux/M/: main.cpp
Pipes Linux/Main/: main.cpp
Pipes Linux/P/: main.cpp
Pipes Linux/S/: main.cpp
Processes Linux/Killer/: main.cpp
Processes Linux/User/: main.cpp
Processes/Proc/Proc/: User.cpp
(+31 files in other folders)
